--- a/test/docs/test.css
+++ b/test/docs/test.css
@@ -26,11 +26,11 @@
 .codehilite .sc { color: #a31515 } /* Literal.String.Char */
 .codehilite .dl { color: #a31515 } /* Literal.String.Delimiter */
 .codehilite .sd { color: #a31515 } /* Literal.String.Doc */
-.codehilite .s2 { color: #a31515; text-decoration: underline } /* Literal.String.Double */
+.codehilite .s2 { color: #a31515 } /* Literal.String.Double */
 .codehilite .se { color: #a31515; font-weight: bold } /* Literal.String.Escape */
 .codehilite .sh { color: #a31515 } /* Literal.String.Heredoc */
 .codehilite .si { color: #a31515 } /* Literal.String.Interpol */
-.codehilite .sx { color: #a31515 } /* Literal.String.Other */
+.codehilite .sx { color: #a31515; text-decoration: underline } /* Literal.String.Other */
 .codehilite .sr { color: #a31515 } /* Literal.String.Regex */
 .codehilite .s1 { color: #a31515 } /* Literal.String.Single */
 .codehilite .ss { color: #a31515 } /* Literal.String.Symbol */
